# bayesian-ssh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  book.toml  build_output.txt  install.sh  test_all_fuzzy.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
.omo/drafts/: ameliorer-bssh.md
demo/: .gitignore  README.md  Vagrantfile  test-all.sh
demo/scripts/: common.sh  setup-kdc.sh  setup-krb-client.sh  setup-services.sh  setup-ssh.sh
demo/test-data/: ssh_config_sample  upload-test.txt
desktop/: package-lock.json  package.json  vite.config.js
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  terminal-windows.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  (+2 more)
docs/: README.md  advanced-usage.md  roadmap.md  technical-architecture.md  troubleshooting.md
docs/src/: SUMMARY.md  introduction.md
scripts/: README.md  build_and_push.sh  clean_releases.sh  update-version.sh
src/: errors.rs  lib.rs  main.rs
src/cli/: mod.rs  parser.rs  utils.rs
src/config/: mod.rs
src/database/: alias.rs  connection.rs  mod.rs  search.rs  session.rs
src/models/: connection.rs  mod.rs  session.rs
src/services/: auth.rs  known_hosts.rs  mod.rs  ping.rs  ssh.rs  transfer.rs
src/tui/: app.rs  event_loop.rs  input.rs  mod.rs  models.rs  state.rs  ui.rs
tests/: doctor_cli.rs  error_reporting_cli.rs
(+117 files in other folders)
