[package]
name = "bayesian-ssh"
version = "1.0.0"
edition = "2021"
authors = ["Abdoufermat5"]
description = "A fast and lightweight SSH session manager with Kerberos support"
license = "MIT"
repository = "https://github.com/abdoufermat5/bayesian-ssh"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal and process management
nix = { version = "0.27", features = ["process"] }
pty = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"
dirs = "5.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"
